--- a/demox/src/main/assets/hello.html
+++ b/demox/src/main/assets/hello.html
@@ -29,7 +29,7 @@
 		</script>
 	</head>
 	<body>
-		<input type="button" value="Send Purchase data" onClick="sendTestData()" />
+		<input id="test_button" type="button" value="Send Purchase data" onClick="sendTestData()" />
 
 		<script type="text/javascript">
 			ta.quick('autoTrack');
@@ -58,7 +58,6 @@
 					}                       //需要上传的事件属性
 				);
 
-				ta.identify("peng");
 				ta.track(
 					'Test',
 					{
