--- a/demox/src/main/assets/hello.html
+++ b/demox/src/main/assets/hello.html
@@ -24,7 +24,8 @@
 				name: 'ta',     //全局的调用变量名，可以任意设置，后续的调用使用该名称即可
 				sdkUrl:'file:///android_asset/thinkingdata.js',   //统计脚本URL
 				serverUrl:'https://sdk.tga.thinkinggame.cn/sync_js',  //数据上传的URL
-				send_method:'image'        //数据上传方式
+				send_method:'image',        //数据上传方式
+				useAppTrack: true
 			});
 		</script>
 	</head>
